@@ -345,7 +345,7 @@ public class ModelDataRootTest extends MediumBasePlatformTestCase {
         var anotherStory = myFixture.configureByFile("Another story.story").getVirtualFile();
 
         var modelDataRoot = setupModelData();
-        modelDataRoot.getModules().get(0).findCategory("Component").get().addTagOrFileToTag("vimeo", anotherStory);
+        modelDataRoot.getModules().getFirst().findCategory("Component").get().addTagOrFileToTag("vimeo", anotherStory);
 
         configureFileTypesInProject(true, true);
         modelDataRoot.updateDisplayName();
@@ -379,7 +379,7 @@ public class ModelDataRootTest extends MediumBasePlatformTestCase {
         var anotherStory = myFixture.configureByFile("Another story.story").getVirtualFile();
 
         var modelDataRoot = setupModelData();
-        modelDataRoot.getModules().get(0).findCategory("Component").get().addTagOrFileToTag("vimeo", anotherStory);
+        modelDataRoot.getModules().getFirst().findCategory("Component").get().addTagOrFileToTag("vimeo", anotherStory);
 
         configureFileTypesInProject(true, true);
         modelDataRoot.updateDisplayName();
